--- a/public/index.html
+++ b/public/index.html
@@ -3,18 +3,47 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>K-Pop Random Dance Generator</title>
-    <meta
-      name="description"
-      content="Create random dance practice audio by combining YouTube song segments with countdown transitions"
-    />
+    <title>K-Pop Random Dance Generator | Create Dance Practice Mixes Online</title>
+    <meta name="description" content="The ultimate K-Pop Random Dance Generator. Combine YouTube song segments with automatic countdown transitions for the perfect dance practice. Free, easy, and online!" />
+    <meta name="keywords" content="K-Pop, Random Dance, Generator, Dance Practice, Kpop Mix, YouTube Audio Combiner, Random Dance Practice, BTS, Blackpink, NewJeans, Twice" />
+    <meta name="author" content="Antigravity K-Pop Tools" />
+    <meta name="robots" content="index, follow" />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://kpopgenerator.cloud/" />
+    <meta property="og:title" content="K-Pop Random Dance Generator | Create Dance Practice Mixes" />
+    <meta property="og:description" content="Create custom K-Pop random dance mixes from YouTube segments with automatic 5-second countdowns." />
+    <meta property="og:image" content="https://kpopgenerator.cloud/assets/og-image.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://kpopgenerator.cloud/" />
+    <meta property="twitter:title" content="K-Pop Random Dance Generator | Create Dance Practice Mixes" />
+    <meta property="twitter:description" content="Create custom K-Pop random dance mixes from YouTube segments with automatic 5-second countdowns." />
+    <meta property="twitter:image" content="https://kpopgenerator.cloud/assets/og-image.png" />
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "K-Pop Random Dance Generator",
+      "description": "An online tool to create random dance practice audio by combining YouTube song segments with countdown transitions.",
+      "applicationCategory": "MultimediaApplication",
+      "operatingSystem": "All",
+      "offers": {
+        "@type": "Offer",
+        "price": "0"
+      }
+    }
+    </script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" type="image/png" href="assets/favicon.png" />
   </head>
   <body>
     <div class="app-container">
@@ -198,6 +227,11 @@
 
       <!-- Footer -->
       <footer class="footer">
+        <section class="seo-content" style="max-width: 800px; margin: 40px auto; padding: 20px; color: var(--text-secondary); font-size: 0.9rem; text-align: left; border-top: 1px solid var(--border-color);">
+            <h3>About K-Pop Random Dance Generator</h3>
+            <p>Our online <strong>K-Pop Random Dance Generator</strong> is designed for fans who love to practice their favorite choreographies. Whether you're preparing for a dance cover, a public random dance play (RDP) event, or just having fun at home, our tool helps you create the perfect practice mix.</p>
+            <p>Features include automatic 5-second countdowns between songs, customizable start and end times for any YouTube video, and a variety tracker to ensure you're practicing a diverse range of bands like <em>BTS, BLACKPINK, NewJeans, TWICE, Stray Kids,</em> and more.</p>
+        </section>
         <p>Made with 💜 for K-Pop dance lovers</p>
       </footer>
     </div>
