--- a/public/admin.html
+++ b/public/admin.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <style>
       .admin-container {
         max-width: 800px;
@@ -210,6 +210,6 @@
       </main>
     </div>
 
-    <script src="admin.js"></script>
+    <script src="app/admin.js"></script>
   </body>
 </html>
