--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <link rel="icon" type="image/png" href="assets/favicon.png" />
   </head>
   <body>
@@ -317,6 +317,6 @@
       </div>
     </template>
 
-    <script src="app.js"></script>
+    <script src="app/app.js"></script>
   </body>
 </html>
