add ads and donation

--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,9 @@
       }
     }
     </script>
+    
+    <!-- PropellerAds Script -->
+    <script src="https://quge5.com/88/tag.min.js" data-zone="211260" async data-cfasync="false"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -83,6 +86,16 @@
               <div class="search-empty">
                 <p>Enter a name to search</p>
               </div>
+            </div>
+
+            <!-- Ad Slot: Sidebar Left (PropellerAds Banner) -->
+            <div class="ad-box small">
+               <span class="ad-label">Advertisement</span>
+               <!-- PropellerAds Banner Zone -->
+               <div id="propeller-sidebar-left">
+                  <!-- Paste your ProppelerAds Banner (300x250) script here -->
+                  <p style="font-size: 0.8rem; color: #555;">(Banner Ad Placeholder)</p>
+               </div>
             </div>
           </aside>
 
@@ -222,11 +235,39 @@
               </div>
             </section>
           </div>
+
+          <!-- Right Sidebar (Ads) -->
+          <aside class="ad-sidebar">
+            <div class="ad-box tall">
+                <span class="ad-label">Advertisement</span>
+                <!-- PropellerAds Skyscraper Zone -->
+                <div id="propeller-sidebar-right-tall">
+                   <!-- Paste your PropellerAds Skyscraper (160x600 or 300x600) script here -->
+                   <p style="font-size: 0.8rem; color: #555;">(Skyscraper Ad Placeholder)</p>
+               </div>
+            </div>
+            
+            <div class="ad-box">
+                <span class="ad-label">Advertisement</span>
+                <!-- PropellerAds Banner Zone -->
+                <div id="propeller-sidebar-right">
+                   <!-- Paste your PropellerAds Banner (300x250) script here -->
+                  <p style="font-size: 0.8rem; color: #555;">(Banner Ad Placeholder)</p>
+               </div>
+            </div>
+          </aside>
         </div>
       </main>
 
       <!-- Footer -->
       <footer class="footer">
+        <div class="footer-support-container">
+            <h3>Enjoying the tool?</h3>
+            <p>Support future updates and keep the servers running!</p>
+            <a href="https://ko-fi.com/dimitrisk80" target="_blank" class="btn btn-kofi">
+                <span class="kofi-icon">☕</span> Buy me a Coffee
+            </a>
+        </div>
         <section class="seo-content" style="max-width: 800px; margin: 40px auto; padding: 20px; color: var(--text-secondary); font-size: 0.9rem; text-align: left; border-top: 1px solid var(--border-color);">
             <h3>About K-Pop Random Dance Generator</h3>
             <p>Our online <strong>K-Pop Random Dance Generator</strong> is designed for fans who love to practice their favorite choreographies. Whether you're preparing for a dance cover, a public random dance play (RDP) event, or just having fun at home, our tool helps you create the perfect practice mix.</p>
