--- a/public/index.html
+++ b/public/index.html
@@ -87,16 +87,6 @@
                 <p>Enter a name to search</p>
               </div>
             </div>
-
-            <!-- Ad Slot: Sidebar Left (PropellerAds Banner) -->
-            <div class="ad-box small">
-               <span class="ad-label">Advertisement</span>
-               <!-- PropellerAds Banner Zone -->
-               <div id="propeller-sidebar-left">
-                  <!-- Paste your ProppelerAds Banner (300x250) script here -->
-                  <p style="font-size: 0.8rem; color: #555;">(Banner Ad Placeholder)</p>
-               </div>
-            </div>
           </aside>
 
           <!-- Song List Section -->
@@ -242,17 +232,7 @@
                 <span class="ad-label">Advertisement</span>
                 <!-- PropellerAds Skyscraper Zone -->
                 <div id="propeller-sidebar-right-tall">
-                   <!-- Paste your PropellerAds Skyscraper (160x600 or 300x600) script here -->
-                   <p style="font-size: 0.8rem; color: #555;">(Skyscraper Ad Placeholder)</p>
-               </div>
-            </div>
-            
-            <div class="ad-box">
-                <span class="ad-label">Advertisement</span>
-                <!-- PropellerAds Banner Zone -->
-                <div id="propeller-sidebar-right">
-                   <!-- Paste your PropellerAds Banner (300x250) script here -->
-                  <p style="font-size: 0.8rem; color: #555;">(Banner Ad Placeholder)</p>
+                   <script>(function(s){s.dataset.zone='10610776',s.src='https://gizokraijaw.net/vignette.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
                </div>
             </div>
           </aside>
